--- a/styles.css
+++ b/styles.css
@@ -505,6 +505,7 @@ a {
 blockquote {
   padding: 0;
   padding-top: 40px;
+  padding-bottom: 27px;
   margin: 0 auto;
   border: none;
   font-size: 23px;
