--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body{
   -webkit-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   height: 100%;
-  width: 100%;
+  min-width: 100%;
   position: relative;
   scroll-behavior: smooth;
   margin:0 auto;
@@ -26,7 +26,7 @@ header,
 main {
     padding: 30px 20px;
     min-height: 100%;
-    width: 90%;
+    width: 95%;
     text-align: left;
     display:block;
     position: relative;
@@ -117,10 +117,9 @@ header h2{
     font-family: 'Arial', sans-serif;
     font-weight: lighter;
     text-transform: none;
-    font-size: 24px;
     margin-top: 20px;
     padding: 5px;
-    font-size: 140%;
+    font-size: 24px;
     text-align: center;
     color: #444444;
 }
@@ -371,7 +370,7 @@ nav a {
 }
 
 .article-content{
-  width: 70%;
+  width: 66.3%;
   height: 100%;
   align-items: center;
   float: right;
@@ -392,7 +391,7 @@ nav a {
   font-weight: 200;
   font-family: "Helvetica Neue";
   color: #444444;
-  text-align: left;
+  text-align: right;
   line-height: 29.9px;
   padding: 4;
 
@@ -442,7 +441,6 @@ nav a {
   display: inline-block;
   text-align: center;
   float: left;
-  justify-content: left;
   outline: none;
   overflow:hidden;
   padding: 40px;
@@ -519,7 +517,7 @@ blockquote {
   text-align: center;
   border: none;
   background: transparent;
-  width: 100%;
+  width: 70%;
 }
 
 blockquote p {
@@ -535,7 +533,7 @@ blockquote p {
 blockquote cite {
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 20px;
-    font-weight:lighter;
+    font-weight:200;
     text-transform: none;
     text-align: right;
     color: #444444;
@@ -557,6 +555,17 @@ main {
   font-family: "Helvetica Neue, Arial", sans-serif;
   color: #444444;
   text-transform: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.rescatcontainer1 .rescatcontainer2{
+    margin:auto;
+    flex-direction: row;
+    overflow: hidden;
+    margin-top: 20px;
+    justify-content: space-around;
 }
 
 ul{
@@ -696,7 +705,6 @@ button{
   text-shadow: none;
   outline: none !important;
 	border: none;
-  justify-content: center;
   align-items: center;
 }
 
