--- a/styles.css
+++ b/styles.css
@@ -690,6 +690,7 @@ button{
   font-size: 18px;
   font-weight: 500;
   overflow:visible;
+  justify-content: center;
 
   padding: 0 20px;
   border-radius: 4px;
